# bifrost

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
src/bifrost/: __init__.py  __main__.py  auth.py  scrobbler.py  sonos_listener.py  track_state.py
src/bifrost/web/: app.py
src/bifrost/web/static/: app.js  index.html  manifest.json  style.css  sw.js
src/sonos_lastfm/: __init__.py  __main__.py  auth.py  config.py  logging_config.py  scrobbler.py  sonos_listener.py  track_state.py
src/sonos_lastfm/web/: app.py
src/sonos_lastfm/web/static/: app.js  index.html  manifest.json  style.css  sw.js
tests/: test_auth.py  test_config.py  test_logging_config.py  test_scrobbler.py  test_sonos_listener.py  test_track_state.py  test_web.py
